name:           recaptcha-wreq
version:        0.2.0
license:        BSD3
license-file:   LICENSE
author:         Tero Laitinen 
maintainer:     Tero Laitinen
synopsis:       Haskell module for accessing ReCAPTCHA service using wreq.
category:       Network
stability:      Experimental
cabal-version:  >= 1.8
build-type:     Simple

library
    build-depends: base >= 4 && < 5
    ghc-options: -Wall  -O2
    exposed: True
    buildable: True
    exposed-modules:
           ReCaptchaWreq

source-repository head
  type:     git
  location: https://github.com/tlaitinen/recaptcha-wreq
